   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.49
 ============

 Released on 

 New features and improvements:

   - ofaDossierManager: gives a title to the dialog.
   - ofaDossierOpen: gives a title to the dialog.
   - ofaDossierOpen: shows all dossier, even if only archived.
   - ofaIPrintable: have an information message after successful printing (todo #1015).
   - ofaPreferences: make the dialog non-modal (todo #992).
   - ofaReconciliation: ask for user confirmation when amounts are not balanced (todo #1019).
   - ofaReconciliation: have a grey/green/yellow light for selected balance (todo #1021).

 Bug fixes:

   - ofaExportAssistant: all strings are quoted (todo #1023).
   - ofaExportAssistant: amounts have a fixed count of decimals (todo #1025).
   - ofaIDateFilter: keep both 'from' and 'to' dates as user preferences (todo #978).
   - ofaImportAssistant: restore the progress bars (todo #1020).
   - ofaIRenderable: have a vertical space before columns header even if no subtitle (todo #1033).
   - ofaIRenderable: fix the vertical position of the rubber (todo #1022).
   - ofaNomodalPage: setup initial default size and position (todo #997).
   - ofaReconcilPage: fix reconciliation date on new entries (todo #1017).
   - ofoAccount: import close indicator.
   - ofoDossier: fix export, taking advantage of ofaBox architecture (todo #1026).
   - ofsCurrency: take into account the digits count of the currency (todo #1016).

 Other changes:

   - Do not install the resources which are managed as GResource (todo #970).
   - myDateCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myDecimalCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myFieldCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
   - myIDialog: new get_default_size() interface method.