@@ -544,9 +544,6 @@
 1027 2016- 3- 1 CODE iexportable_export(): factorize ofaBox-managed code 
      2016- 3- 2      Have to be done after exporter/exportable review
 
-1028 2016- 3- 2 FEAT FileFormat: whether string should be surrounded by
-                     double quotes should be a configuration parameter
-
 1034
 
 -----------------------------------------------------------------------
@@ -905,6 +902,10 @@
 
 1026 2016- 3- 1 CODE ofoDossier: take advantage of ofaBox when exporting
      2016- 3- 2 done
+
+1028 2016- 3- 2 FEAT FileFormat: whether string should be surrounded by
+                     double quotes should be a configuration parameter
+     2016- 3- 3 done
 
 1029 2016- 3- 2 FEAT ofaBox: have to/from string, to/from dbms
      2016- 3- 2 done
