@@ -119,6 +119,7 @@ const gchar   *ofa_file_format_get_charmap      ( const ofaFileFormat *settings 
 myDateFormat   ofa_file_format_get_date_format  ( const ofaFileFormat *settings );
 gchar          ofa_file_format_get_decimal_sep  ( const ofaFileFormat *settings );
 gchar          ofa_file_format_get_field_sep    ( const ofaFileFormat *settings );
+gchar          ofa_file_format_get_string_delim ( const ofaFileFormat *settings );
 gint           ofa_file_format_get_headers_count( const ofaFileFormat *settings );
 gboolean       ofa_file_format_has_headers      ( const ofaFileFormat *settings );
 
@@ -130,6 +131,7 @@ void           ofa_file_format_set              ( ofaFileFormat *settings,
 														myDateFormat date_format,
 														gchar decimal_sep,
 														gchar field_sep,
+														gchar string_delim,
 														gint count_headers );
 
 G_END_DECLS
